--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="google-site-verification" content="<meta name="google-site-verification" content="v769BE5saw-2a9gLXzq8b_kDua8B6WM7zAHG_F9Vmtk"/>
+    <meta name="google-site-verification" content="v769BE5saw-2a9gLXzq8b_kDua8B6WM7zAHG_F9Vmtk" />
     
     <title>HG YADAV 87 | Portfolio</title>
     </head>
